--- a/projects/flight-app/src/app/sidebar/sidebar.component.html
+++ b/projects/flight-app/src/app/sidebar/sidebar.component.html
@@ -16,6 +16,13 @@
     </li>
 
     <li>
+      <a routerLink="flight-lookahead">
+        <i class="ti-user"></i>
+        <p>Lookahead</p>
+      </a>
+    </li>
+
+    <li>
       <a routerLink="flight-booking/flight-search">
         <i class="ti-arrow-top-right"></i>
         <p>Flights</p>
